--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     
     
 <section class="section_5" id="sect5">
-    <p style="color:MediumOrchid;font-family: monospace;font-size: large;"><strong>Задание 5</strong></p>
+    <p style="color:OrangeRed;font-family: monospace;font-size: large;"><strong>Задание 5</strong></p>
        <p id="h"><b>Фильмы-победители Оскар за последние 6 лет</b></p>
        <ul class ="block1">
     <li class="w6">«В центре внимания»-2016</li>
