--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
        <li>Мао Цзэдун</li>
        <li>Маргарет Тэтчер</li>
        <li>Хо Ши Мин</li>
-       <li>Мартин Кинг и др.</li> 
+       <li>Мартин Кинг</li> 
        </ol>
 </section><br>
     
@@ -213,9 +213,8 @@
   </tr>
 <br>        
 </table>
- <p id="h"> Расписание на знаменатель </p>
+ <p id="h"> Расписание на знаменатель </p><br>
     <table>
-
  <tr>
     <th>Время</th>
     <th>Понедельник</th>
