--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@ window.addEventListener("DOMContentLoaded", function() {
   </style>
 
 <!-- Trigger/Open The Modal -->
-<button id="myBtn" class="custom-btn" >Open Modal</button>
+<button id="myBtn" class="custom-btn"  onclick="changeColor();" >Open Modal</button>
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
